--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -1,45 +1,29 @@
 .button {
   background-color: orangered;
-  padding: 15px 30px;
+  box-shadow: var(--shadow);
+  padding: 8px 17px;
   border-radius: 10px;
   border: none;
-  color: white;
+  color: black;
   font-size: 1.2rem;
   font-weight: bolder;
-  margin-bottom: 20px;
-  //   transition: 0.4;
+  color: white;
+  display: block;
   &:hover {
-    background-color: rgba(201, 198, 27, 0.884);
-    color: orangered;
+    // background-color: transparent;
     cursor: pointer;
   }
-}
-
-.image {
-  position: relative;
-}
-.contactUs {
-  display: flex;
-  position: absolute;
-  align-items: center;
-  top: 180px;
-  right: 35%;
-  gap: 10px;
-  background-color: white;
-  box-shadow: var(--shadow);
-  //   width: max-content;
-  padding: 10px 30px;
-  border-radius: 2rem;
-  color: cyan;
-  font-weight: bolder;
-}
-
-.contactIcon {
-  width: 2.5rem;
-  height: 2.5rem;
-  display: flex;
-  background-color: blueviolet;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
+  .icon {
+    margin-left: 10px;
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    color: blueviolet;
+    border-radius: 2rem;
+    padding: 5px;
+    &:hover {
+      background-color: blueviolet;
+      color: white;
+    }
+  }
 }
